Add Codex subprocess progress logging
https://github.com/JonathanGWesterfield/Librarian/pull/48
